--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,13 @@
   <div id="instructions1">
     <h1 class="title2">Nuestro objetivo. </h1>
     <p class="intro"> El acceso a productos de salud reproductiva (comos los anticonceptivos y el aborto con
-      medicamentos)y a la información confiable empodera a las mujeres que comparten conocimiento y a quienes la reciben.
+      medicamentos)y a la información confiable empodera a las mujeres que comparten conocimiento y a quienes la
+      reciben.
       Es por eso que las feministas de todo el mundo están cooperando para poner éstos en manos de las mujeres, donde
       deberían estar.
       <br>
-      Como sabemos que la situación actúal no permite la libre comunicación entre organizaciones abortistas y las personas que requieren de su ayuda
+      Como sabemos que la situación actúal no permite la libre comunicación entre organizaciones abortistas y las
+      personas que requieren de su ayuda
       es que te ofrecemos <strong>Para Las Amigas</strong>, una AppWeb que permite cifrar y descifrar mensajes con el
       fin de mantener en resguardo la confidencialidad y seguridad de las partes que aportan a la libertad de derechos
       reproductivos.
@@ -70,7 +72,8 @@
       <br>
       <i>Para Las Amigas</i> puede traducir todos los mensajes que incluyan datos alfabéticos desde la A hasta la
       Z, a excepcion de la Ñ. Además, no soporta valores de puntuacion como :;,.-_¿!?¡*+ entre otros.
-        Como recomendación, recuerda el nivel de dificultad elegido ya que necesitarás usarlo cuando quieras volver a cifrar/descifrar el mensaje ingresado.
+      Como recomendación, recuerda el nivel de dificultad elegido ya que necesitarás usarlo cuando quieras volver a
+      cifrar/descifrar el mensaje ingresado.
     </p>
     <button type="button" id="btnStart3">Comenzar</button>
   </div>
@@ -81,7 +84,7 @@
 
 
   <div>
-    <button type="button" id="btnHome" > Volver a inicio</button>
+    <button type="button" id="btnHome"> Volver a inicio</button>
     <div id="pageOne">
 
       <h1 id="letStart">¡Comencemos!</h1>
@@ -96,7 +99,7 @@
       <button type="button" id="btnCode"> Codificar </button>
       <button type="button" id="btnDecode"> Decodificar </button>
       <label for="decode"></label>
-      <input type="text" placeholder="Aquí aparecerá tu texto traducido" id="decodeBox" class="box" >
+      <input type="text" placeholder="Aquí aparecerá tu texto traducido" id="decodeBox" class="box">
       <br>
 
       <br>
